<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PSBVerify">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/product_set_semi_product">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="10dp">

                            <TextView
                                android:id="@+id/PCBATitle"
                                android:layout_width="match_parent"
                                android:layout_height="77dp"
                                android:gravity="center"
                                android:text="@string/psb_assy_verification"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="horizontal"
                                    android:paddingStart="10dp">

                                    <EditText
                                        android:id="@+id/edPicklistPCBA"
                                        android:layout_width="wrap_content"
                                        android:layout_height="50dp"
                                        android:ems="10"
                                        android:hint="@string/becode"
                                        android:inputType="text"
                                        android:textColor="#000000"
                                        android:textSize="20sp"
                                        tools:ignore="TouchTargetSizeCheck" />

                                    <Button
                                        android:id="@+id/btnPCBClear"
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:layout_margin="10dp"
                                        android:layout_weight="1"
                                        android:text="Clear" />
                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/PCBAssyHoriz"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"></LinearLayout>

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pcbAssyProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>